--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,22 @@
-# Eclipse
-.classpath
-.project
-.settings/
+# Compiled class file
+*.class
 
-# Intellij
-.idea/
-*.iml
-*.iws
+# Log file
+*.log
 
-# Mac
-.DS_Store
+# BlueJ files
+*.ctxt
 
-# Maven
-log/
-target/
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
